# privastream

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.frontend  Dockerfile.mediasoup  LICENSE  README.md  SECURITY.md  audio-processing.md  docker-compose.yml  main.py  pii-1st-place-solution.ipynb  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
audio-processing/: requirements.txt
audio-processing/demos/: clean_latency_demo.py  simple_audio_redaction_mock.py  simple_latency_demo.py
audio-processing/scripts/: start_audio_redaction.py
audio-processing/src/: audio_optimizations.py  low_latency_redactor.py  model_optimizations.py  pii_detector.py  pipeline_types.py  realtime_audio_redactor.py  ultra_low_latency_engine.py  whisper_processor.py
audio-processing/tests/: latency_performance_test.py  test_audio_redaction.py
audio-william/: audio_filter_api.py  requirements.txt  test.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  INSTALLATION.md
models/: unified_detector.py
models/face_blur/: README.md
models/pii_blur/: pii_clf.joblib  run_live.py  test_pii_detector.py
notebooks/: autoblur_except_me.py  face_blur.ipynb  plate_blur.ipynb  street_blur.ipynb  test1.py
notebooks/crops_icdar15/: test_labels.csv  val_labels.csv
notebooks/whitelist/: creator_embedding.json
privastream/: __init__.py
privastream.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
privastream/cli/: __init__.py
privastream/core/: __init__.py  logging.py
privastream/docs/: audio-processing.md
privastream/tools/: migrate_to_shared_models.py
src/cli/: main.py
src/configs/: default.yaml
src/core/: exceptions.py
src/data/: README.md
src/models/: __init__.py
src/tests/: test_models.py  test_web.py
src/web/: __init__.py
web-demo-ui/: .env.production  .env.single-machine  .gitignore  AUDIO_DEBUG_STEPS.md  AUDIO_FIX_SUMMARY.md  FACE_ENROLLMENT_SETUP.md  README.md  deploy-port-80-443.sh  deploy-privastream.sh  docker-compose.single-machine.yml  docker-compose.yml  face_enrollment_requirements.txt  face_enrollment_server.py  install_face_enrollment.bat  package-lock.json  run_all.bat  setup-nginx-privastream.sh  setup-ssl.sh  start-native.sh  start-privastream.sh  start-production.sh  start_all.sh  stop-native.sh  stop-privastream.sh  test_connection.html  test_face_enrollment_api.py  working-video-server.js
(+171 files in other folders)
